# sdl2-build

./: .gitignore  CMakeLists.txt  README.md  patch.py  sdl.txt
include/: ._LeapObjectiveC.mm
src/: Sample.cpp  test.c  test_gpu.c
